--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": " ",
+  "homepage": "https://Manikantadangeti89.github.io/portfolio-site",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -12,7 +12,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
