--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://Manikantadangeti89.github.io/portfolio-site",
+  "homepage": "https://paras0308.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
